--- a/mininet/mininet/provision/playbooks/configure-lxd-no-clustering.yml
+++ b/mininet/mininet/provision/playbooks/configure-lxd-no-clustering.yml
@@ -16,7 +16,7 @@
           (?i)Create a new BTRFS pool?                                                    : "yes"
           (?i)Would you like to use an existing block device?                             : "no"
           (?i)Would you like to connect to a MAAS server?                                 : "no"
-          (?i)Size in GB of the new loop device                                           : "15GB"
+          (?i)Size in GB of the new loop device                                           : "15"
           (?i)Would you like to configure LXD to use an existing bridge or host interface?: "no"
           (?i)Would you like to create a new local network bridge?                        : "no"
           (?i)Would you like LXD to be available over the network                         : "no"
